--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,19 +2,19 @@
   <div class="row mt-4">
     <div class="col-12">
 		<% if @results.count == 1 %>
-	 		<h1 class="text-center mb-4"> <%= job_count %> <%= @query %> job found:</h1>
+	 		<p class="text-pull-left mb-4"> <%= job_count %> <%= @query %> job found</p>
 			<% else %>
-			<h1 class="text-center mb-4"> <%= job_count %> <%= @query %> jobs found:</h1>
+			<p class="text-pull-left mb-4"> <%= job_count %> <%= @query %> jobs found</p>
 			<% end %>
 			<table class="table">
 				<tbody>
 					<% @results.each do |job| %>
 					<tr>
-						<!-- <td class="text-pull-left">
-							<% if job["company_logo"] %>
-					        <%= image_tag job["company_logo"] %><br/>
-							<% end %>
-							</td> -->
+						<td class="text-pull-left">
+							<div class="img-thumbnail">
+								<% image_tag job["company_logo"] if job["company_logo"].present? %><br/>
+							</div>
+							</td>
 							<td class="text-pull-left">
 								<%= link_to job["title"] %><br/>
 				      		  	<%= job["company"] %><br/>
