--- a/app/views/search/new.html.erb
+++ b/app/views/search/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row mt-4">
       <div class="col-12">
-        <h1 class="text-center">Job Search</h1>
+        <h1 class="text-center">GitHub Jobs Search</h1>
         <%= form_tag '/search' do %>
           <div class="form-group">
             <%= text_field_tag :query, nil, {class: "form-control", placeholder: "Enter a keyword"} %>
