--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,47 +1,2 @@
-<!-- <pre><%= JSON.pretty_generate(@jobs) %></pre> -->
+<pre><%= JSON.pretty_generate(@jobs) %></pre>
 
-<div class="container">
-  <div class="row mt-4">
-    <div class="col-12">
-	    <% if @jobs.count == 1 %>
-	      <p class="text-pull-left mb-4"> <%= job_count %> <%= params[:query] %> job found</p>
-	    <% else %>
-		  <p class="text-pull-left mb-4"> <%= job_count %> <%= params[:query] %> jobs found</p>
-		<% end %>
-	  <table class="table">
-		<tbody>
-		  <% @jobs.each do |job| %>
-			<tr>
-
-			  <td class="text-pull-left">
-			    <div class="img-thumbnail">
-				  <% image_tag job["company_logo"] if job["company_logo"].present? %><br/>
-				</div>
-			  </td>
-
-			  <td class="text-pull-left">
-			    <%= link_to job["title"] %><br/>
-				<%= job["company"] %><br/>
-
-				<span class="text-muted">
-				  <%= job["location"] %>
-			    </span><br/>
-
-				<span class="text-muted">
-				  <%= job["type"] %>
-				</span><br/>
-
-				<span class="text-muted">
-			      <p class="font-italic"> Posted <%= job["created_at"] %></p>
-				</span><br/>
-	  	       </td>
-	  	     </tr>
-		   <% end %>
-	  	 </tbody>
-       </table>
-	   <% if (@jobs.nil? or @jobs == []) %>
-	     <p><h2>No jobs found...</h2></p>
-	   <% end %>
-	 </div>
-  </div>
-</div>
